[project]
name = "clawagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crewai>=1.14.3",
    "langchain>=1.2.15",
    "langchain-google-genai>=4.2.2",
    "langchain-openai>=1.2.1",
    "loguru>=0.7.3",
    "openai>=2.32.0",
    "python-dotenv>=1.2.2",
    "tavily-python>=0.7.24",
]

[tool.uv.workspace]
members = [
    "ai-blog-agent",
]
